--- a/build-task3-Desktop-Debug/Makefile
+++ b/build-task3-Desktop-Debug/Makefile
@@ -53,8 +53,12 @@ OBJECTS_DIR   = ./
 ####### Files
 
 SOURCES       = ../task3/main.cpp \
+		../task3/map-and-list.cpp \
+		../task3/performancemeasurement.cpp \
 		../task3/unordered_map-and-list.cpp 
 OBJECTS       = main.o \
+		map-and-list.o \
+		performancemeasurement.o \
 		unordered_map-and-list.o
 DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
@@ -128,7 +132,10 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exceptions.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
-		../task3/task3.pro unordered_map-and-list.h ../task3/main.cpp \
+		../task3/task3.pro map-and-list.h \
+		unordered_map-and-list.h ../task3/main.cpp \
+		../task3/map-and-list.cpp \
+		../task3/performancemeasurement.cpp \
 		../task3/unordered_map-and-list.cpp
 QMAKE_TARGET  = task3
 DESTDIR       = 
@@ -331,8 +338,15 @@ compiler_clean:
 
 ####### Compile
 
-main.o: ../task3/main.cpp ../task3/unordered_map-and-list.h
+main.o: ../task3/main.cpp ../task3/unordered_map-and-list.h \
+		../task3/map-and-list.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../task3/main.cpp
+
+map-and-list.o: ../task3/map-and-list.cpp ../task3/map-and-list.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o map-and-list.o ../task3/map-and-list.cpp
+
+performancemeasurement.o: ../task3/performancemeasurement.cpp ../task3/unordered_map-and-list.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o performancemeasurement.o ../task3/performancemeasurement.cpp
 
 unordered_map-and-list.o: ../task3/unordered_map-and-list.cpp ../task3/unordered_map-and-list.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o unordered_map-and-list.o ../task3/unordered_map-and-list.cpp
